Mask Parenting does not work #65751

Closed
opened 2019-06-12 12:45:15 +02:00 by Sebastian Koenig · 5 comments

System Information
Operating system: Linux-4.4.0-148-generic-x86_64-with-debian-stretch-sid 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.56

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-12 07:01, hash: fd2e143eaf
Worked: 2.79

Short description of error
Parenting a mask to a tracker does not seem to work. Even though the Active Point panel lists the marker that the mask point was parented to, when playing back the clip the mask does not move with the Track.
However, once I save the file and reopen it, the mask is moving together with the Track it was parented to. Seems like some despgraph update is missing?
Exact steps for others to reproduce the error
Obviously I can't upload a file that shows the bug, because after saving it works correctly.
So, open Blender, load a clip, track a marker.
Then create a mask, select one or all points of the mask, hit Ctrl+P.
On playback the mask will not move with the Track.
Save the file and reopen and it should work.

**System Information** Operating system: Linux-4.4.0-148-generic-x86_64-with-debian-stretch-sid 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.56 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-12 07:01, hash: `fd2e143eaf` Worked: 2.79 **Short description of error** Parenting a mask to a tracker does not seem to work. Even though the Active Point panel lists the marker that the mask point was parented to, when playing back the clip the mask does not move with the Track. However, once I save the file and reopen it, the mask is moving together with the Track it was parented to. Seems like some despgraph update is missing? **Exact steps for others to reproduce the error** Obviously I can't upload a file that shows the bug, because after saving it works correctly. So, open Blender, load a clip, track a marker. Then create a mask, select one or all points of the mask, hit Ctrl+P. On playback the mask will not move with the Track. Save the file and reopen and it should work.
Author
Member

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k
Sergey Sharybin was assigned by Sebastian Koenig 2019-06-12 12:45:26 +02:00

This issue was referenced by d7df962e04

This issue was referenced by d7df962e0411a94d37bb1b33ee5fdc8359fb8baf

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

@sebastian_k, please give a test. Seems to work for me, but never know.

@sebastian_k, please give a test. Seems to work for me, but never know.
Author
Member

Yep, that works. Thanks a lot, @Sergey :)

Yep, that works. Thanks a lot, @Sergey :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65751
No description provided.