Fix T65751: Mask Parenting does not work