source/blender/editors/space_clip/tracking_ops_track.c
@@ -44,6 +44,8 @@
 
 #include "PIL_time.h"
 
+#include "DEG_depsgraph.h"
+
 #include "clip_intern.h"  // own include
 #include "tracking_ops_intern.h"
 
@@ -271,6 +273,7 @@ static void track_markers_endjob(void *tmv)
   BKE_autotrack_context_sync(tmj->context);
   BKE_autotrack_context_finish(tmj->context);
 
+  DEG_id_tag_update(&tmj->clip->id, ID_RECALC_COPY_ON_WRITE);
   WM_main_add_notifier(NC_SCENE | ND_FRAME, tmj->scene);
 }
 
@@ -426,6 +429,7 @@ static int refine_marker_exec(bContext *C, wmOperator *op)
     }
   }
 
+  DEG_id_tag_update(&clip->id, ID_RECALC_COPY_ON_WRITE);
   WM_event_add_notifier(C, NC_MOVIECLIP | NA_EVALUATED, clip);
 
   return OPERATOR_FINISHED;
